--- a/index.html
+++ b/index.html
@@ -13,11 +13,23 @@
 
     <h1>Guess the Pastry</h1>
 
-    <p>To guess a letter, press the corresponding key on your keyboard.</p>
+    <section class="main clearfix">
 
-    <div id="word-display"></div>
+        <div id="display-main">
+            <p>To guess a letter, press the corresponding key on your keyboard.</p>
+            <span id="word-display"></span>
+        </div>
 
-    <div id="letter-bank"></div>
+        <div id="letter-bank">
+            <p>Guesses remaining: <span id="guess"></span></p>
+            <span id="used-letter">A</span>
+        </div>
+
+    </section>
+
+    <footer>
+        <span>This is the footer.</span>
+    </footer>
 
     <script src="assets/javascript/game.js"></script>
 
