display user key in letter bank

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <div id="letter-bank">
             <p>Guesses remaining: <span id="guess"></span></p>
-            <span id="used-letter">A</span>
+            <span id="used-letter"></span>
         </div>
 
     </section>
