--- a/index.html
+++ b/index.html
@@ -16,19 +16,21 @@
     <section class="main clearfix">
 
         <div id="display-main">
-            <p>To guess a letter, press the corresponding key on your keyboard.</p>
+            <p class="smooth">To guess a letter, press the corresponding key on your keyboard.</p>
             <span id="word-display"></span>
         </div>
 
         <div id="letter-bank">
-            <p>Guesses remaining: <span id="guess"></span></p>
+            <p class="smooth">Guesses remaining: <span id="guess"></span></p>
             <span id="used-letter"></span>
         </div>
+
+        <a class="button" href="#">Reset</a>
 
     </section>
 
     <footer>
-        <span>This is the footer.</span>
+        <span class="smooth">This is the footer.</span>
     </footer>
 
     <script src="assets/javascript/game.js"></script>
