updated game file from test file and updated index

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
 
         <div id="letter-bank">
-            <p class="smooth">Guesses remaining: <span id="guess"></span></p>
+            <p class="smooth">Strikes (6 MAX): <span id="strikes"></span></p>
             <span id="used-letter"></span>
         </div>
 
@@ -34,5 +34,6 @@
     </footer>
 
     <script src="assets/javascript/game.js"></script>
+    <!--<script src="assets/javascript/test.js"></script>-->
 
 </body>
