basic game code complete

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <h1>Guess the Pastry</h1>
+    <h1 id="game-response">Guess the Pastry</h1>
 
     <section class="main clearfix">
 
@@ -25,12 +25,12 @@
             <span id="used-letter"></span>
         </div>
 
-        <a class="button" href="#">Reset</a>
+        <a class="button" href="" onclick="resetGame()">Reset</a>
 
     </section>
 
     <footer>
-        <span class="smooth">This is the footer.</span>
+        <span class="smooth"></span>
     </footer>
 
     <script src="assets/javascript/game.js"></script>
