--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
             <span id="used-letter"></span>
         </div>
 
-        <a class="button" href="" onclick="resetGame()">Reset</a>
+        <a class="button" onclick="resetGame()">Reset</a>
+        <a class="button" onclick="stopMusic()" id="mute">Mute</a>
 
     </section>
 
     <footer>
-        <span class="smooth"></span>
+        <span class="smooth">Sound files from <em>Mario Party</em>.</span>
     </footer>
 
     <script src="assets/javascript/game.js"></script>
-    <!--<script src="assets/javascript/test.js"></script>-->
 
 </body>
