removed console logs

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
 
         <footer>
             <span class="smooth">
-                <a href="https://github.com/skmanik" target="_blank">click to see github.</a>
+                <a href="https://github.com/skmanik/Hangman-Game" target="_blank">
+                    click to see github.
+                </a>
                 sound files taken from <em>Mario Party™.</em>
             </span>
         </footer>
